Added name to the creative tab

--- a/src/main/resources/assets/elventools/lang/en_us.json
+++ b/src/main/resources/assets/elventools/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "elventools.cmode_tab": "Elven Tools",
   "item.elventools.elven_bread": "Elven Bread",
   "item.elventools.example_block": "Example Block",
   "item.elventools.elven_sword": "Elven Sword",
