--- a/src/main/resources/assets/elventools/lang/en_us.json
+++ b/src/main/resources/assets/elventools/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.elventools.elven_bread": "Elven Bread",
   "item.elventools.example_block": "Example Block",
   "item.elventools.elven_sword": "Elven Sword",
+  "item.elventools.elven_rapier": "Elven Rapier",
   "item.elventools.elven_pickaxe": "Elven Pickaxe",
   "item.elventools.gold_coin": "Gold Coin",
   "item.elventools.theodora_charm": "Theodora Charm",
