--- a/src/main/resources/assets/elventools/lang/en_us.json
+++ b/src/main/resources/assets/elventools/lang/en_us.json
@@ -1,7 +1,8 @@
 {
   "elventools.cmode_tab": "Elven Tools",
   "item.elventools.elven_bread": "Elven Bread",
-  "item.elventools.example_block": "Example Block",
+  "item.elventools.ruby_ore_block": "Ruby Ore",
+  "item.elventools.ruby": "Ruby",
   "item.elventools.elven_sword": "Elven Sword",
   "item.elventools.elven_rapier": "Elven Rapier",
   "item.elventools.elven_pickaxe": "Elven Pickaxe",
