Added variant of Elven Sword

--- a/src/main/resources/assets/elventools/lang/en_us.json
+++ b/src/main/resources/assets/elventools/lang/en_us.json
@@ -4,6 +4,7 @@
   "block.elventools.ruby_ore_block": "Ruby Ore",
   "item.elventools.ruby": "Ruby",
   "item.elventools.elven_sword": "Elven Sword",
+  "item.elventools.elven_sword_v2": "Elven Sword",
   "item.elventools.elven_rapier": "Elven Rapier",
   "item.elventools.elven_pickaxe": "Elven Pickaxe",
   "item.elventools.gold_coin": "Gold Coin",
