Added Elven Star Coin

--- a/src/main/resources/assets/elventools/lang/en_us.json
+++ b/src/main/resources/assets/elventools/lang/en_us.json
@@ -8,6 +8,7 @@
   "item.elventools.elven_rapier": "Elven Rapier",
   "item.elventools.elven_pickaxe": "Elven Pickaxe",
   "item.elventools.gold_coin": "Gold Coin",
+  "item.elventools.elven_star_coin": "Elven Star Coin",
   "item.elventools.theodora_charm": "Theodora Charm",
   "item.elventools.theodora_amulet": "Theodora Amulet",
   "item.elventools.elven_steel_ingot": "Elven Steel Ingot"
