--- a/src/main/resources/assets/elventools/lang/en_us.json
+++ b/src/main/resources/assets/elventools/lang/en_us.json
@@ -10,7 +10,7 @@
   "item.elventools.gold_coin": "Gold Coin",
   "item.elventools.gold_and_ruby_coin": "Gold and Ruby Coin",
   "item.elventools.gold_and_emerald_coin": "Gold and Emerald Coin",
-  "item.elventools.elven_star_coin": "Elven Star Coin",
+  "item.elventools.gold_and_star_coin": "Elven Star Coin",
   "item.elventools.theodora_charm": "Theodora Charm",
   "item.elventools.theodora_amulet": "Theodora Amulet",
   "item.elventools.elven_steel_ingot": "Elven Steel Ingot"
