--- a/src/main/resources/assets/elventools/lang/en_us.json
+++ b/src/main/resources/assets/elventools/lang/en_us.json
@@ -7,6 +7,7 @@
   "item.elventools.elven_sword_v2": "Elven Sword",
   "item.elventools.elven_rapier": "Elven Rapier",
   "item.elventools.elven_pickaxe": "Elven Pickaxe",
+  "item.elventools.elven_pickaxe_v2": "Elven Pickaxe",
   "item.elventools.gold_coin": "Gold Coin",
   "item.elventools.gold_and_ruby_coin": "Gold and Ruby Coin",
   "item.elventools.gold_and_emerald_coin": "Gold and Emerald Coin",
