--- a/src/main/resources/assets/elventools/lang/en_us.json
+++ b/src/main/resources/assets/elventools/lang/en_us.json
@@ -6,11 +6,12 @@
   "item.elventools.elven_sword": "Elven Sword",
   "item.elventools.elven_sword_v2": "Elven Sword",
   "item.elventools.elven_rapier": "Elven Rapier",
+  "item.elventools.elven_rapier_v2": "Elven Rapier",
   "item.elventools.elven_pickaxe": "Elven Pickaxe",
   "item.elventools.elven_pickaxe_v2": "Elven Pickaxe",
   "item.elventools.gold_coin": "Gold Coin",
-  "item.elventools.gold_and_ruby_coin": "Gold and Ruby Coin",
-  "item.elventools.gold_and_emerald_coin": "Gold and Emerald Coin",
+  "item.elventools.gold_and_ruby_coin": "Gold And Ruby Coin",
+  "item.elventools.gold_and_emerald_coin": "Gold And Emerald Coin",
   "item.elventools.gold_and_star_coin": "Gold And Star Coin",
   "item.elventools.theodora_charm": "Theodora Charm",
   "item.elventools.theodora_amulet": "Theodora Amulet",
