--- a/src/main/resources/assets/elventools/lang/en_us.json
+++ b/src/main/resources/assets/elventools/lang/en_us.json
@@ -2,8 +2,11 @@
   "elventools.cmode_tab": "Elven Tools",
   "item.elventools.elven_bread": "Elven Bread",
   "item.elventools.elven_parsnip": "Elven Parsnip",
+  "item.elventools.roast_elven_parsnip": "Roasted Elven Parsnip",
+  "item.elventools.elven_cherry_tomatoes": "Elven Cherry Tomatoes",
   "block.elventools.ruby_ore_block": "Ruby Ore",
   "block.elventools.elven_parsnip_crop": "Elven Parsnip Crop",
+  "block.elventools.elven_cherry_tomatoes_crop": "Elven Cherry Tomatoes Crop",
   "item.elventools.ruby": "Ruby",
   "item.elventools.elven_sword": "Elven Sword",
   "item.elventools.elven_sword_v2": "Elven Sword",
