--- a/src/main/resources/assets/elventools/lang/en_us.json
+++ b/src/main/resources/assets/elventools/lang/en_us.json
@@ -4,6 +4,8 @@
   "item.elventools.elven_parsnip": "Elven Parsnip",
   "item.elventools.roasted_elven_parsnip": "Roasted Elven Parsnip",
   "item.elventools.elven_cherry_tomatoes": "Elven Cherry Tomatoes",
+  "item.elventools.elven_cherry_tomatoes_seeds": "Elven Cherry Tomatoes Seeds",
+  "item.elventools.parsnip_and_potato_stew": "Parsnip And Potato Stew",
   "block.elventools.ruby_ore_block": "Ruby Ore",
   "block.elventools.ruby_block": "Ruby Block",
   "block.elventools.elven_parsnip_crop": "Elven Parsnip Crop",
