Added summoning crystal and loot tables

--- a/src/main/resources/assets/elventools/lang/en_us.json
+++ b/src/main/resources/assets/elventools/lang/en_us.json
@@ -23,5 +23,6 @@
   "item.elventools.gold_and_star_coin": "Gold And Star Coin",
   "item.elventools.theodora_charm": "Theodora Charm",
   "item.elventools.theodora_amulet": "Theodora Amulet",
+  "item.elventools.summoning_crystal": "Summoning Crystal",
   "item.elventools.elven_steel_ingot": "Elven Steel Ingot"
 }
