--- a/src/main/resources/assets/elventools/lang/en_us.json
+++ b/src/main/resources/assets/elventools/lang/en_us.json
@@ -7,6 +7,7 @@
   "item.elventools.elven_cherry_tomatoes_seeds": "Elven Cherry Tomatoes Seeds",
   "item.elventools.parsnip_and_potato_stew": "Parsnip And Potato Stew",
   "block.elventools.ruby_ore_block": "Ruby Ore",
+  "block.elventools.deepslate_ruby_ore_block": "Deepslate Ruby Ore",
   "block.elventools.ruby_block": "Ruby Block",
   "block.elventools.elven_parsnip_crop": "Elven Parsnip Crop",
   "block.elventools.elven_cherry_tomatoes_crop": "Elven Cherry Tomatoes Crop",
